improved xjdf layout conversion